Removed button margins to avoid layout issues on mobile

--- a/src/css/background-image.css
+++ b/src/css/background-image.css
@@ -7,11 +7,3 @@ body {
   height: 100vh;
   margin: 0;
 }
-
-/*@media (max-width: 1800px) {
-  body {
-    height: 100vh;
-    margin: 0;
-  }
-}
-*/
