--- a/src/css/style.css
+++ b/src/css/style.css
@@ -48,7 +48,10 @@ li {
   cursor: pointer;
   padding: 25px 80px;
   display: inline-block;
-  margin: 15px 30px;
+  margin-top: 15px;
+  margin-bottom: 0px;
+  margin-left: 30px;
+  margin-right: 30px;
   text-transform: uppercase;
   letter-spacing: 1px;
   font-weight: 700;
@@ -83,7 +86,10 @@ li {
   cursor: pointer;
   padding: 25px 80px;
   display: inline-block;
-  margin: 15px 30px;
+  margin-top: 15px;
+  margin-bottom: 0px;
+  margin-left: 30px;
+  margin-right: 30px;
   text-transform: uppercase;
   letter-spacing: 1px;
   font-weight: 700;
